maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:36: error: ')' expected but ';' found.
  } ; return x;
    ^